// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProcoreDocumentSearchBox - Should render 1`] = `
<div
  className=""
  id="procore-search-box"
>
  <input
    className="default"
    id="search"
    name="search"
    onChange={[Function]}
    placeholder="Search this folder"
    type="text"
    value=""
  />
</div>
`;

exports[`ProcoreDocumentSearchBox - Should update search term 1`] = `
<div
  className=""
  id="procore-search-box"
>
  <input
    className="filled"
    id="search"
    name="search"
    onChange={[Function]}
    placeholder="Search this folder"
    type="text"
    value="abc"
  />
</div>
`;
